add modal-window and transitions

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           >
           <ul class="site-nav-list list">
             <li class="site-nav-item">
-              <a class="site-nav-link link" href="./index.html">Studio</a>
+              <a class="site-nav-link link active-nav" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="site-nav-item">
               <a class="site-nav-link link" href="./portfolio.html"
@@ -64,11 +66,20 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-
-          <button type="button" class="hero-button">Order Service</button>
+          <button type="button" class="hero-button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
-
+      <div class="backdrop is-hidden" data-modal>
+        <div class="modal-window">
+          <button class="modal-close-button" type="button" data-modal-close>
+            <svg class="modal-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-modal"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
       <!-- Стратегия -->
       <section class="advices section">
         <div class="container">
@@ -414,7 +425,7 @@
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
-                <svg class="footer-soc-icon" width="24" height="19,5">
+                <svg class="footer-soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -437,5 +448,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
