--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
               <a class="site-nav-link link" href="./index.html">Studio</a>
             </li>
             <li class="site-nav-item">
-              <a class="site-nav-link link" href="./portfolio.html"
+              <a class="site-nav-link link active-nav" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -85,13 +85,22 @@
           <ul class="services-list list">
             <li class="services-item">
               <a class="services-link link" href="">
-                <img
-                  class="services-photo"
-                  src="./images/works-img-1.jpg"
-                  alt="Banking app"
-                  width="360"
-                  height="300"
-                />
+                <div class="services-thumb">
+                  <img
+                    class="services-photo"
+                    src="./images/works-img-1.jpg"
+                    alt="Banking app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="services-overlay">
+                    <p class="services-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="services-wrap">
                   <h2 class="services-title">Banking App Interface Concept</h2>
                   <p class="services-text">App</p>
@@ -100,13 +109,22 @@
             </li>
             <li class="services-item">
               <a class="services-link link" href="">
-                <img
-                  class="services-photo"
-                  src="./images/works-img-2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="services-thumb">
+                  <img
+                    class="services-photo"
+                    src="./images/works-img-2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="services-overlay">
+                    <p class="services-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="services-wrap">
                   <h2 class="services-title">Cashless Payment</h2>
                   <p class="services-text">Marketing</p>
@@ -115,12 +133,21 @@
             </li>
             <li class="services-item">
               <a class="services-link link" href="">
-                <img
-                  src="./images/works-img-3.jpg"
-                  alt="Meditation app"
-                  width="360"
-                  height="300"
-                />
+                <div class="services-thumb">
+                  <img
+                    src="./images/works-img-3.jpg"
+                    alt="Meditation app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="services-overlay">
+                    <p class="services-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="services-wrap">
                   <h2 class="services-title">Meditation App</h2>
                   <p class="services-text">App</p>
@@ -129,13 +156,22 @@
             </li>
             <li class="services-item">
               <a class="services-link link" href="">
-                <img
-                  class="services-photo"
-                  src="./images/works-img-4.jpg"
-                  alt="Taxi service"
-                  width="360"
-                  height="300"
-                />
+                <div class="services-thumb">
+                  <img
+                    class="services-photo"
+                    src="./images/works-img-4.jpg"
+                    alt="Taxi service"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="services-overlay">
+                    <p class="services-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="services-wrap">
                   <h2 class="services-title">Taxi Service</h2>
                   <p class="services-text">Marketing</p>
@@ -144,13 +180,22 @@
             </li>
             <li class="services-item">
               <a class="services-link link" href="">
-                <img
-                  class="services-photo"
-                  src="./images/works-img-5.jpg"
-                  alt="Screen illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="services-thumb">
+                  <img
+                    class="services-photo"
+                    src="./images/works-img-5.jpg"
+                    alt="Screen illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="services-overlay">
+                    <p class="services-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="services-wrap">
                   <h2 class="services-title">Screen Illustrations</h2>
                   <p class="services-text">Design</p>
@@ -159,13 +204,22 @@
             </li>
             <li class="services-item">
               <a class="services-link link" href="">
-                <img
-                  class="services-photo"
-                  src="./images/works-img-6.jpg"
-                  alt="Woman takes a picture"
-                  width="360"
-                  height="300"
-                />
+                <div class="services-thumb">
+                  <img
+                    class="services-photo"
+                    src="./images/works-img-6.jpg"
+                    alt="Woman takes a picture"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="services-overlay">
+                    <p class="services-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="services-wrap">
                   <h2 class="services-title">Online Courses</h2>
                   <p class="services-text">Marketing</p>
@@ -174,13 +228,22 @@
             </li>
             <li class="services-item">
               <a class="services-link link" href="">
-                <img
-                  class="services-photo"
-                  src="./images/works-img-7.jpg"
-                  alt="Instagram stories concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="services-thumb">
+                  <img
+                    class="services-photo"
+                    src="./images/works-img-7.jpg"
+                    alt="Instagram stories concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="services-overlay">
+                    <p class="services-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="services-wrap">
                   <h2 class="services-title">Instagram Stories Concept</h2>
                   <p class="services-text">Design</p>
@@ -189,13 +252,22 @@
             </li>
             <li class="services-item">
               <a class="services-link link" href="">
-                <img
-                  class="services-photo"
-                  src="./images/works-img-8.jpg"
-                  alt="Woman is hanging vegetables"
-                  width="360"
-                  height="300"
-                />
+                <div class="services-thumb">
+                  <img
+                    class="services-photo"
+                    src="./images/works-img-8.jpg"
+                    alt="Woman is hanging vegetables"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="services-overlay">
+                    <p class="services-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="services-wrap">
                   <h2 class="services-title">Organic Food</h2>
                   <p class="services-text">Web Site</p>
@@ -204,13 +276,22 @@
             </li>
             <li class="services-item">
               <a class="services-link link" href="">
-                <img
-                  class="services-photo"
-                  src="./images/works-img-9.jpg"
-                  alt="A cup of coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="services-thumb">
+                  <img
+                    class="services-photo"
+                    src="./images/works-img-9.jpg"
+                    alt="A cup of coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="services-overlay">
+                    <p class="services-overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="services-wrap">
                   <h2 class="services-title">Fresh Coffee</h2>
                   <p class="services-text">Web Site</p>
@@ -247,7 +328,7 @@
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
-                <svg class="footer-soc-icon" width="24" height="19,5">
+                <svg class="footer-soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
